Fix: Allow scrolling beyond Hit It button on mobile

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,6 @@
 @media (max-width: 600px) {
   .bottom-spacer {
-    height: 20vh;
+    height: 40vh;
     width: 100%;
   }
 }
